proj1/tests/other-tests/minz-tests/correct/nested_while.py
i = 0
while i < 5:
	j = 0
	while j <= i:
		print j
		j = j + 1
	i = i + 1
