proj1/tests/other-tests/minz-tests/error/bad_while_loop.py
i = 0
while :
	print i
	i = i + 1

i = 0
while i < 5
	print i
	i = i + 1

i = 0
while i = 0:
	print i
	i = i + 1